<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/PopupTheme">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/pop_txtProdImg" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prod_name"
                android:id="@+id/pop_txtProdNm"
                android:textSize="24sp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod_price"
                android:id="@+id/pop_txtProdPrice"
                android:textSize="20sp"
                android:textColor="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_won"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorGray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pop_btnMinus"
                android:text="@string/minus"/>

            <EditText
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:id="@+id/pop_edtProdCnt"
                android:text="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pop_btnPlus"
                android:text="@string/plus"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:textSize="22sp"
            android:id="@+id/tv_selid"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_selid"/>
    </LinearLayout>

</LinearLayout>